<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.ets.navigatets.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_navigate"
            app:destination="@+id/navigation_navigate"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_navigate"
        android:name="ca.ets.navigatets.ui.navigate.NavigateFragment"
        android:label="@string/title_navigate"
        tools:layout="@layout/fragment_navigate" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ca.ets.navigatets.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/chooseResearchModeFragment"
        android:name="ca.ets.navigatets.ui.search.ChooseResearchModeFragment"
        android:label="Recherche"
        tools:layout="@layout/fragment_choose_research_mode">
        <action
            android:id="@+id/action_chooseResearchMode_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_chooseResearchMode_to_rechercheVideoFragment"
            app:destination="@id/rechercheVideoFragment" />
        <action
            android:id="@+id/action_chooseResearchMode_to_rechercheLiveFragment"
            app:destination="@id/rechercheLiveFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="ca.ets.navigatets.ui.search.SearchFragment"
        android:label="Recherche (dictée)"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/rechercheVideoFragment"
        android:name="ca.ets.navigatets.ui.search.RechercheVideoFragment"
        android:label="Recherche vidéo"
        tools:layout="@layout/fragment_recherche_video" />

    <fragment
        android:id="@+id/rechercheLiveFragment"
        android:name="ca.ets.navigatets.ui.search.RechercheLiveFragment"
        android:label="Recherche live"
        tools:layout="@layout/fragment_recherche_live" />
</navigation>